--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,9 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #f0108f38;
   min-height: 100vh;
+  min-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
